# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiignore  .editorconfig  README.md  \  brew-cask-macos.txt  brew-formula-macos.txt  brew-formula-wsl2.txt  brew-trust-taps.txt  chezmoi.toml.tmpl  dot_tool-versions  dot_wezterm.lua  dot_wezterm.lua.tmpl  dot_zshenv  dot_zshenv.tmpl  dot_zshrc  run_onchange_after_check-surfingkeys-sync.sh.tmpl  run_onchange_after_link-firefox-profile.sh.tmpl  setup.sh.tmpl  setup_macos.sh
AppData/Local/nvim/dot_git/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
AppData/Local/nvim/dot_git/logs/: HEAD
AppData/Local/nvim/dot_git/objects/00/: readonly_8193a8863df5f67d144f3a35e2a308067f1045  readonly_a83feafaec1eff9d5d255904fe5573a36855ba  readonly_d424bf15a89309c89663cf168470845fde0d41  readonly_dcee50fe967c772afc74fc7e53105ff3a5ee46
AppData/Local/nvim/dot_git/objects/01/: readonly_2f70c7a528dd4214e7101e8a5f60b8c33ebfc1  readonly_4072c0d3ff39bb7a6818cdf67c04fe67ff8185  readonly_8c9830b8eb362c1498e42e92724d01136ab5b8
AppData/Local/nvim/dot_git/objects/02/: readonly_533baab1d89c7131b80b8b2718af30fbf874c8  readonly_60f0a514be929069834691248cdf010c53197c  readonly_acdfbc4511780b849e776633ae7eb8fa0657c8  readonly_b01f5e6825748c41a238f29b60fe0b9fca63a0  readonly_c7a082fc89c16f5a6af16b3254957d0a0745e1
AppData/Local/nvim/dot_git/objects/03/: readonly_4a4a5c4fce7abce963380e0542f7651b79a04f  readonly_7bfd6811c1cb3595079c4a209ff8f299c19cce  readonly_849268c329190d9e045852410ef320d7c1e252  readonly_a56f53160e9e43236bf06edfe7aed4d501bd8c  readonly_e0465b8e447ff91402f4327f8e68fd407868c4  readonly_e53fdffb666a741d0a71d38c87f08d21975a5d
AppData/Local/nvim/dot_git/objects/04/: readonly_0c1298da7523f91a1ec9e7539f2822e536888d  readonly_dc7e6e42b0134b39852209eac714944c9a803d
AppData/Local/nvim/dot_git/objects/05/: readonly_9d692a9bcf074fc3372cfd51570c94e328e453  readonly_d046ba043b625bdc5503c35a9c8f5147df267c  (+1 more)
AppData/Roaming/Code/User/: settings.json
AppData/Roaming/nushell/: config.nu
AppData/Roaming/yazi/config/: theme.toml  yazi.toml
docs/: chezmoi-run-scripts.md
dot_config/: executable_surfingkeys.js
dot_config/bottom/: bottom.toml
dot_config/carapace/bridge/zsh/: dot_zcompdump_capture
dot_config/carapace/specs/: fetch-blob.yml  mycmd.yml
dot_config/chezmoi/: chezmoi.toml.tmpl
dot_config/claude/: executable_statusline_command.sh  settings.json
dot_config/firefox/profile/: user.js  user.js.tmpl
dot_config/firefox/profile/chrome/: userChrome.css
dot_config/gh/: private_hosts.yml
dot_config/gh-dash/: config.yml
dot_config/git/: config.tmpl
dot_config/htop/: private_htoprc
dot_config/lazygit/: README.md  config.yml
dot_config/meetingbar/: eventStartScript.scpt
dot_config/myscripts/: jira_render.py  jsonl_unescape.py  kibana_json_stringify.py  set_mcp_server_claude_desktop.py
dot_config/nushell/: config.nu
dot_config/nvim/lua/config/: autocmds.lua  general.lua  keymaps.lua
dot_config/nvim/lua/config/keymaps/: octo.lua
dot_config/nvim/lua/plugins/conform/: config.lua
dot_config/nvim/lua/plugins/nvim-lint/: config.lua
dot_config/nvim/lua/plugins/nvim-neo-tree/: config.lua
dot_config/nvim/lua/plugins/nvim-pet/: init.lua
dot_config/nvim/lua/plugins/nvim-treesitter/: config.lua
dot_config/nvim/lua/plugins/octo/: config.lua
dot_config/posting/: config.yaml
dot_config/private_atuin/: private_config.toml
dot_config/private_pet/: config.toml  config.toml.tmpl  snippet.toml
dot_config/private_pet/scripts/: gh_pr_reviews.py
dot_config/starship/: starship.toml
dot_config/surfingkeys/: index.js
dot_config/termux/: executable_termux_ngrok_install.sh  termux.properties
dot_config/wezterm/: chezmoi_tmpl.lua.tmpl  wezterm.lua  wezterm.lua.tmpl
dot_config/zellij/: config.kdl
dot_config/zsh/: dot_zshrc
dot_config/zsh/python/: pyproject.toml
dot_config/zsh/src/: alias.zsh  alias.zsh.tmpl  asdf.zsh  atuin.zsh  aws.zsh  bazel.zsh  carapace.zsh  chezmoi.zsh  completion.zsh  core.zsh  dart.zsh  darwin.zsh  darwin_post_init.zsh  darwin_pre_init.zsh  executable_sleep.zsh  executable_wakeup.zsh  functions.zsh  fzf.zsh  gh.zsh  git.zsh  history.zsh  init.zsh  jira.zsh  k8s.zsh  keybinds.zsh  ls.zsh  meetingbar.zsh  mysql.zsh  notify.zsh  patch_functions.zsh  path.zsh  pet.zsh  rbenv.zsh  search.zsh  starship.zsh  termux_pre_init.zsh  wsl.zsh  wsl_post_init.zsh  wsl_pre_init.zsh  zinit.zsh  (+1 more)
dot_config/zsh/src/installed/: brew-cask-macos.txt  brew-formula-macos.txt
dot_config/zsh/src/leits.MeetingBar/: README.md  eventStartScript.scpt  joinEventScript.scpt
dot_config/zsh/src/myscripts/: executable_aws-list-assumable-roles  executable_connected-wifi-ssid  executable_convert-mp3-to-aiff  executable_disable_sleepwatcher  executable_enable_sleepwatcher  executable_fetch-blob  executable_fzf-listprojects  executable_llm_agent_say_hello_world  executable_normalize-nfc  executable_normalize-nfd  executable_parse-llm-response  executable_set_run_on_sleep  executable_set_run_on_wake  executable_timenow-jst  executable_transcribe-yt  executable_uniqlo-akamai  executable_whisper-mic  jsonl_unescape.py
dot_config/zsh/src/prompt_repository/snippet/: stop_being_nice.txt
dot_config/zsh/src/python/: pyproject.toml
dot_config/zsh/src/python/common/: langchain_invoke.py
dot_config/zsh/src/python/llm_cli/: parse_response.py
dot_config/zsh/src/python/meetingbar/: llm_function.py
dot_config/zsh/src/python/sleepwatcher/: set_run_on_sleep.py  set_run_on_wake.py  should_run.py
dot_config/zsh/src/python/whisper/: extract_section_from_json.py
dot_glzr/glazewm/: config.yaml
dot_glzr/zebar/: config.yaml  settings.json  vanilla-clear.html
dot_glzr/zebar/dot_marketplace/: emptope.attaquer-modified.json
dot_local/share/private_gnupg/: gpg-agent.conf.tmpl
dot_starship/: starship.toml
readonly_Documents/PowerShell/: .gitignore  Microsoft.PowerShell_profile.ps1  README.md  defaultapps.config  devapps.config  profile.ps1
readonly_Documents/PowerShell/Modules/MyModule/: MyModule.psm1
(+880 files in other folders)
